# simple-shader-bevy

./: Cargo.toml  README.md
assets/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.wgsl
examples/: glsl.rs  wgsl.rs
src/: components.rs  lib.rs
