[package]
name = "simple_shader_bevy"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.15.3"
features = ["shader_format_glsl"]

[lib]
name = "simple_shader_bevy"
path = "src/lib.rs"

[[example]]
name = "glsl"
path = "examples/glsl.rs"

[[example]]
name = "wgsl"
path = "examples/wgsl.rs"